{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 95,
  "lineage": "44173eaa-37cc-6854-af9c-9a4ce211ccb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-008f5d46f9a5d6898",
            "arn": "arn:aws:ec2:eu-west-2:031924002960:instance/i-0b73224e50a2e51d7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cicd-demo-ec2-profile",
            "id": "i-0b73224e50a2e51d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e6f5bd815197ac5",
            "private_dns": "ip-10-0-1-153.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.153",
            "public_dns": "ec2-13-135-172-205.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.135.172.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-2:031924002960:key/edc27e04-6b42-4f5d-beaf-60708866acd2",
                "throughput": 125,
                "volume_id": "vol-0d6e3e711d548b1f9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d04451e440a3f7bb",
            "tags": {
              "Name": "cicd-demo-web-server",
              "Project": "cicd-demo"
            },
            "tags_all": {
              "Name": "cicd-demo-web-server",
              "Project": "cicd-demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0827abcf1f7e4be96"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_s3_bucket.assets",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:031924002960:internet-gateway/igw-0e3c8d8daf20b8901",
            "id": "igw-0e3c8d8daf20b8901",
            "owner_id": "031924002960",
            "tags": {
              "Name": "cicd-demo-igw",
              "Project": "cicd-demo"
            },
            "tags_all": {
              "Name": "cicd-demo-igw",
              "Project": "cicd-demo"
            },
            "vpc_id": "vpc-02332635130ea3fa2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:031924002960:route-table/rtb-09149c37fe87bdbd3",
            "id": "rtb-09149c37fe87bdbd3",
            "owner_id": "031924002960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3c8d8daf20b8901",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cicd-demo-public-rt",
              "Project": "cicd-demo"
            },
            "tags_all": {
              "Name": "cicd-demo-public-rt",
              "Project": "cicd-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-02332635130ea3fa2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa1689da693e3da7",
            "route_table_id": "rtb-09149c37fe87bdbd3",
            "subnet_id": "subnet-0d04451e440a3f7bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:031924002960:security-group/sg-0827abcf1f7e4be96",
            "description": "Security group for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0827abcf1f7e4be96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "169.150.197.116/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cicd-demo-ec2-sg",
            "name_prefix": "",
            "owner_id": "031924002960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-demo-ec2-sg",
              "Project": "cicd-demo"
            },
            "tags_all": {
              "Name": "cicd-demo-ec2-sg",
              "Project": "cicd-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-02332635130ea3fa2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:031924002960:subnet/subnet-0d04451e440a3f7bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d04451e440a3f7bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031924002960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-demo-public-subnet",
              "Project": "cicd-demo"
            },
            "tags_all": {
              "Name": "cicd-demo-public-subnet",
              "Project": "cicd-demo"
            },
            "vpc_id": "vpc-02332635130ea3fa2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:031924002960:vpc/vpc-02332635130ea3fa2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e4e4c5d0b7e6b9eb",
            "default_route_table_id": "rtb-02a96634cb3d9bfbd",
            "default_security_group_id": "sg-04793f67186954068",
            "dhcp_options_id": "dopt-0d2f3862e72a77887",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02332635130ea3fa2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a96634cb3d9bfbd",
            "owner_id": "031924002960",
            "tags": {
              "Name": "cicd-demo-vpc",
              "Project": "cicd-demo"
            },
            "tags_all": {
              "Name": "cicd-demo-vpc",
              "Project": "cicd-demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}